// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnorderedList renders StyledUl with given display prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-block;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders default StyledUl 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders different types of children 1`] = `
<DocumentFragment>
  .emotion-15 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-8 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-8.emotion-8 {
  width: 16px;
  height: 16px;
}

.emotion-11 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-11 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-11:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-11:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-11:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-11:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-11:visited:not(:disabled) {
  color: #903d91;
}

.emotion-11:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-11 {
    vertical-align: text-bottom;
  }
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

<ul
    class="emotion-15"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          String node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          100
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          <a
            class="emotion-11"
            href="http://localhost:6006"
          >
            <span
              class="emotion-10"
            >
              <span
                class="emotion-7"
              >
                <span
                  class="emotion-6"
                >
                  Link component
                </span>
              </span>
              <span
                class="emotion-7"
              >
                <svg
                  aria-labelledby="mock-nk-1"
                  class="emotion-8"
                  viewBox="0 0 24 24"
                >
                  <title
                    id="mock-nk-1"
                  >
                    External link
                  </title>
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </span>
            </span>
          </a>
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker 1`] = `
<DocumentFragment>
  .emotion-15 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-4 {
  list-style: none;
}

.emotion-4:last-child + div {
  margin: 0;
}

.emotion-3 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-1 {
  margin-right: 8px;
}

.emotion-1 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-1 svg,
.emotion-1 img {
  display: block;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 8px;
  height: 8px;
}

<ul
    class="emotion-15"
  >
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker with different size 1`] = `
<DocumentFragment>
  .emotion-15 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-4 {
  list-style: none;
}

.emotion-4:last-child + div {
  margin: 0;
}

.emotion-3 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-1 {
  margin-right: 8px;
}

.emotion-1 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-1 svg,
.emotion-1 img {
  display: block;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 16px;
  height: 16px;
}

<ul
    class="emotion-15"
  >
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          aria-hidden="true"
          class="emotion-1"
        >
          <svg
            aria-labelledby="mock-nk-1"
            class="emotion-0"
            viewBox="0 0 400 400"
          >
            <title
              id="mock-nk-1"
            >
              Twitter logo
            </title>
            <g>
              <circle
                cx="200"
                cy="200"
                fill="#1DA1F2"
                r="200"
              />
            </g>
            <g>
              <path
                d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                fill="#FFFFFF"
              />
            </g>
          </svg>
        </div>
        <p
          class="emotion-2"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-9 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-9"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults when marker is incorrect 1`] = `
<DocumentFragment>
  .emotion-9 {
  margin: 0;
  padding: 0;
  display: block;
}

.emotion-2 {
  list-style: none;
}

.emotion-2:last-child + div {
  margin: 0;
}

.emotion-1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-9"
  >
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          first node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <p
          class="emotion-0"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
